[package]
name = "redis-from-scratch-rs"
version = "0.1.0"
rust-version = "1.77"
edition = "2021"

[features]
debug = ["console-subscriber"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "=4.4.18", features = ["derive"] }
console-subscriber = { version =" 0.2",  optional = true }
derive-debug-extras = "=0.2.2"
futures = "0.3.30"
itertools = "0.12.1"
opentelemetry = "0.22.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.3.0", features = ["metrics"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde-resp = "0.3.1"
thiserror = "1"
tokio = { version = "1.23", features = ["full", "tracing"] } # async networking
tokio-util = { version ="0.7.10", features = ["codec"]}
tracing = "0.1"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry-semantic-conventions = "0.14.0"
tracing-core = "0.1.32"
opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
lazy_static = "1.4.0"
socket2 = "0.5.7"
tracing-appender = "0.2.3"
